--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -102,5 +102,13 @@
                 }
             }
         }
+    },
+    "apiMessages":{
+
+        "settings":{
+            "updateSuccess":"Las configuraciones han sido guardadas",
+            "updateError": "Error al guardar las configuraciones. Código de error: ",
+            "getInitialConfigurationError": "Error al obtener la configuración inicial. Por favor revise la conexión al API. Código de error: "
+        }
     }
 }
