Add new quotation localization and update breadcrumb styles; enhance NavigationBar and format functions for improved UI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,6 +47,15 @@
                     "edit": "Edit",
                     "delete": "Delete"
                 }
+            }, 
+            "newQuotation":{
+                "title": "New Quotation"
+            },
+            "editQuotation": {
+
+            },
+            "deleteQuotation": {
+
             }
         },
         "invoices": {
