--- a/src/locales/kr.json
+++ b/src/locales/kr.json
@@ -47,7 +47,12 @@
                     "edit": "편집",
                     "delete": "삭제"
                 }
-            }
+            },
+            "newQuotation": {
+                "title": "새로운 견적"
+            },
+            "editQuotation": {},
+            "deleteQuotation": {}
         },
         "invoices": {
             "mainPage": {
