feat: Add language selection and update translations for companies and quotation steps

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,9 @@
                 "edit": "Edit",
                 "delete": "Delete"
             },
+            "companies": {
+                "title": "My companies"
+            },
             "settings": {
                 "title": "Settings"
             }
