--- a/src/locales/kr.json
+++ b/src/locales/kr.json
@@ -19,6 +19,9 @@
                 "edit": "편집",
                 "delete": "삭제"
             },
+            "companies": {
+                "title": "내 회사들"
+            },
             "settings": {
                 "title": "설정"
             }
@@ -49,7 +52,61 @@
                 }
             },
             "newQuotation": {
-                "title": "새로운 견적"
+                "title": "새로운 견적",
+                "steps": {
+                    "step1": {
+                        "title": "공급업체 정보",
+                        "registrationNumber": "등록번호",
+                        "comercialName": "상호",
+                        "legalRepresentative": "대표자",
+                        "address": "사업장소재지",
+                        "typeOfBusiness": "업 태",
+                        "category": "종목",
+                        "telFax": "전화 / 팩스",
+                        "website": "홈 페 이 지"
+                    },
+                    "step2": {
+                        "title": "송장 세부 정보",
+                        "generalInformation": {
+                            "title": "일반 견적 정보",
+                            "date": "날짜",
+                            "customer": "고객 이름",
+                            "workConcept": "작업의 개념",
+                            "durationOfWork": "작업 기간"
+                        },
+                        "itemDetails": {
+                            "title": "사용된 공급품에 대한 자세한 정보",
+                            "description": "설명",
+                            "productEspecification": "제품 사양",
+                            "unit": "단가",
+                            "amount": "수량",
+                            "unitPrice": "단가",
+                            "supplyPrice": "공급가",
+                            "vat": "부가세",
+                            "observations": "비고",
+                            "AutomaticCalculation": {
+                                "title": "자동으로 계산",
+                                "supplyPrice": "공급가",
+                                "vat": "부가세"
+                            },
+                            "addItem": "새로운 공급 추가"
+                        },
+                        "totalPricing": {
+                            
+                        }
+                    },
+                    "step3": {
+                        "title": "시사"
+                    },
+                    "step4": {
+                        "title": "견적 다운로드"
+                    }
+                },
+                "navigation": {
+                    "previous": "이전의",
+                    "next": "수행원",
+                    "gotoHome": "처음으로 이동"
+                }
             },
             "editQuotation": {},
             "deleteQuotation": {}
