feat: Add edit option for companies in navigation and update translations for English, Spanish, and Korean

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,7 +20,8 @@
                 "delete": "Delete"
             },
             "companies": {
-                "title": "My companies"
+                "title": "My companies",
+                "edit": "Edit"
             },
             "settings": {
                 "title": "Settings"
