--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -20,7 +20,8 @@
                 "delete": "Eliminar"
             },
             "companies": {
-                "title": "Mis compañias"
+                "title": "Mis compañias",
+                "edit": "Editar"
             },
             "settings": {
                 "title": "Configuración"
